Change font, edit spacing and size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://kit.fontawesome.com/5ea81b718e.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&display=swap" rel="stylesheet"
+        type=" text/css">
+    <link href=" https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
         type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
@@ -73,7 +75,7 @@
                         <i class="fas fa-landmark fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="about-button-heading mt-3 mb-0">ประสบการณ์</h4>
-                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Long Experience</h4>
+                    <h4 class="about-button-subheading mt-0 mb-3 text-muted">Experience</h4>
                     <div class="collapse" id="long-experience">
                         <div class="card card-body pt-0"></div>
                         <p class="text-muted">ศูนย์ทันตกรรม พี ดี ซี
@@ -865,14 +867,14 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
                 <h3 class="section-subheading text-muted mb-1">
-                    Contact us for a free consultation and to make an appointment
+                    ปรึกษาปัญหาเรื่องฟันและนัดหมายกับทันตแพทย์เฉพาะทางฟรี
                 </h3>
                 <h3 class="section-subheading text-muted">
-                    ปรึกษาปัญหาเรื่องฟันและนัดหมายกับทันตแพทย์เฉพาะทางฟรี
+                    Contact us for a free consultation and to make an appointment
                 </h3>
             </div>
             <div class="row">
-                <div class="py-4 col-lg-6 text-center">
+                <div class="py-4 col-lg-6 text-center mb-4">
                     <div class="pb-3 my-2 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="tel:6629527475" target="_blank"><i
                                 class="fas fa-phone"></i></a>
@@ -898,7 +900,7 @@
                         class="contact-map" frameborder="0" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
                 </div>
-                <div class="py-4 col-lg-6 text-center">
+                <div class="py-4 col-lg-6 text-center mb-4">
                     <div class="pb-3 my-2 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="tel:6623610853" target="_blank"><i
                                 class="fas fa-phone"></i></a>
@@ -1184,12 +1186,12 @@
                                     ควรพาลูกมาพบทันตแพทย์อย่างสม่ำเสมอ เริ่มตั้งแต่อายุ 1 ปี
                                 </h5>
                                 <h5 id="pedodontics3">การเคลือบฟลูออไรด์</h5>
-                                <p class="mb-3">ฟลูออไรด์เป็นสารที่ช่วยป้องกันฟันผุอย่างมีประสิทธิภาพ
+                                <p class=" mb-3">ฟลูออไรด์เป็นสารที่ช่วยป้องกันฟันผุอย่างมีประสิทธิภาพ
                                     ฟลูออไรด์จะทำให้เกิดผลึกที่ผิวเคลือบฟัน
                                     ซึ่งมีความแข็งแรงทนทานต่อการกัดกร่อนของกรดที่เกิดจากแบคทีเรียที่แผ่นคราบฟัน
                                     นอกจากนี้ฟลูออไรด์ยังมีคุณสมบัติในการซ่อมรอยผุของฟันในระยะแรกเริ่ม ด้วยกลไก
                                     Recalcification</p>
-                                <h5 class="text-left">เราได้รับฟลูออไรด์จากทางใดบ้าง</h5>
+                                <h5 class="text-left mt-0">เราได้รับฟลูออไรด์จากทางใดบ้าง</h5>
                                 <ul>
                                     <li>การรับประทาน
                                         ในต่างประเทศจะมีการเติมสารฟลูออไรด์ลงในน้ำประปา เพื่อป้องกันฟันผุ
@@ -1220,9 +1222,9 @@
                                     ซี่ 1, 2 และ 3 ขึ้นเมื่ออายุประมาณ 6 ปี 12 ปี และ 18-25 ปี ตามลำดับ
                                     ก็ควรเคลือบหลุมร่องฟันเพื่อป้องกันฟันผุด้วย</p>
                                 <h5 id="pedodontics5">การแปรงฟัน (Brushing)</h5>
-                                <p class="mb-3">ควรเลือกแปรงสีฟันที่มีขนาดพอเหมาะ ขนแปรงนุ่ม
+                                <p>ควรเลือกแปรงสีฟันที่มีขนาดพอเหมาะ ขนแปรงนุ่ม
                                     ไม่แข็งกระด้างเกินไปเพราะจะระคายเคืองต่อเหงือก ทำให้คอฟันสึก</p>
-                                <h5 class="text-left">การแปรงฟันที่ถูกวิธี</h5>
+                                <h5 class="text-left mt-0">การแปรงฟันที่ถูกวิธี</h5>
                                 <ul>
                                     <li><b>การแปรงฟันด้านข้าง</b>
                                         ให้ขนแปรงทำมุมประมาณ 45 องศากับตัวฟัน
@@ -1234,7 +1236,7 @@
                                         ให้ตั้งแปรงให้ขนแปรงตรงระนาบเดียวกับด้านบดเคี้ยว
                                         แล้วถูไปถูมา</li>
                                 </ul>
-                                <h5 id="pedodontics6" class="mt-4">ไหมขัดฟัน (Flossing)</h5>
+                                <h5 id="pedodontics6">ไหมขัดฟัน (Flossing)</h5>
                                 <p>นอกจากการแปรงฟันให้สะอาดแล้ว ควรใช้ไหมขัดฟัน (Dental Floss)
                                     ร่วมทำความสะอาดตามซอกฟันหรือบริเวณที่ขนแปรงเข้าไม่ถึง โดยการใช้ไหมขัดฟัน
                                     ความยาวประมาณ 18 นิ้ว พันรอบปลายนิ้วกลางทั้งสองข้าง
@@ -1244,7 +1246,7 @@
                                     เข้าระหว่างซอกฟันแล้วโค้งไหมโอบรอบฟัน เคลื่อนขึ้นลง เพื่อทำความสะอาดซอกฟัน
                                     <b>ควรใช้ไหมขัดฟันทำความสะอาดซอกฟันทุกซี่ทั้งฟันบนและฟันล่าง อย่างน้อยวันละครั้ง
                                         (หลังแปรงฟันก่อนนอน)</b></p>
-                                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                <button class=" btn btn-primary mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
@@ -1306,7 +1308,7 @@
                                         ทำให้มองไม่เห็นเครื่องมือที่ใส่ในการจัดฟัน
                                         เหมาะสำหรับคนไข้ที่ไม่ต้องการให้ผู้อื่นเห็นว่าจัดฟัน</li>
                                 </ul>
-                                <h5 class="mt-4" id="orthodontics2">ขั้นตอนการจัดฟัน</h5>
+                                <h5 id="orthodontics2">ขั้นตอนการจัดฟัน</h5>
                                 <ol>
                                     <li><b>ขั้นตอนการตรวจวินิจฉัย และวิเคราะห์โรค</b>
                                         <ul>
@@ -1333,14 +1335,14 @@
                                     <li><b>ขั้นตอนการใส่เครื่องมือคงสภาพฟัน ภายหลังจากการถอดเครื่องมือจัดฟัน</b>
                                     </li>
                                 </ol>
-                                <h5 class="mt-4" id="orthodontics3">คำแนะนำการดูแลรักษาขณะได้รับการจัดฟัน</h5>
+                                <h5 id="orthodontics3">คำแนะนำการดูแลรักษาขณะได้รับการจัดฟัน</h5>
                                 <ul>
                                     <li>ดูแลรักษาสุขภาพฟันด้วยการแปรงฟันและใช้ไหมขัดฟันสม่ำเสมอ</li>
                                     <li>หลีกเลี่ยงการรับประทานอาหารที่แข็งและเหนียว</li>
                                     <li>ปฏิบัติตามคำแนะนำของทันตแพทย์ในการรักษาอย่างเคร่งครัด</li>
                                     <li>ควรได้รับการขูดหินปูนทุกๆ 6 เดือน</li>
                                 </ul>
-                                <button class="btn btn-primary mt-2" data-dismiss="modal" type="button">
+                                <button class="btn btn-primary mt-5" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
                                 </button>
