--- a/index.html
+++ b/index.html
@@ -866,11 +866,9 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted mb-1">
-                    ปรึกษาปัญหาเรื่องฟันและนัดหมายกับทันตแพทย์เฉพาะทางฟรี
-                </h3>
-                <h3 class="section-subheading text-muted">
-                    Contact us for a free consultation and to make an appointment
+                <h3 class="section-subheading-caution">
+                    ปรึกษาปัญหาเรื่องฟันและนัดหมายกับทันตแพทย์เฉพาะทางฟรี <br> Contact us for a free consultation and to
+                    make an appointment
                 </h3>
             </div>
             <div class="row">
