--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/pedodontics.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/pdc.png" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">สาขางามวงศ์วาน</div>
@@ -635,7 +635,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/cosmetic.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">ทันตกรรมตกแต่ง</div>
@@ -663,7 +663,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/oral-surgery.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">ศัลยกรรมช่องปาก</div>
@@ -1914,7 +1914,7 @@
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">ทันตกรรมตกแต่ง</h2>
                                 <p class="item-intro text-muted text-center">Cosmetic Dentistry</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/cosmetic.jpg" alt="" />
                                 <h5>เคลือบฟันเทียม (Veneer Facing)</h5>
                                 <p><b>เคลือบฟันเทียม (Veneer Facing)</b>
                                     เป็นทันตกรรมตกแต่งเพื่อความสวยงามโดยการใช้ชิ้นเซรามิกเคลือบปิดด้านหน้าฟัน
@@ -2017,7 +2017,7 @@
             </div>
         </div>
     </div>
-    <!-- Modal 9: Endodontics-->
+    <!-- Modal 9: Oral Surgery-->
     <div class="portfolio-modal modal fade" id="portfolioModal9" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -2030,7 +2030,8 @@
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">ศัลยกรรมช่องปาก</h2>
                                 <p class="item-intro text-muted text-center">Oral Surgery</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/oral-surgery.jpg"
+                                    alt="" />
                                 <h5>ฟันคุด (Tooth Impaction)</h5>
                                 <p>ฟันคุด (Tooth Impaction)
                                     ฟันที่ไม่สามารถขึ้นมาทางช่องปากได้ตามปกติซึ่งอาจจะไม่ขึ้นมาเลย
