--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/pdc.png" alt="" />
+                            <img class="img-fluid" src="assets/img/pdc.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">สาขางามวงศ์วาน</div>
