--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/pdc.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/ngamwonwan.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">สาขางามวงศ์วาน</div>
@@ -187,7 +187,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/pedodontics.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/ngamwonwan.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">สาขาบางนา</div>
@@ -1325,6 +1325,68 @@
                                             </p>
                                         </div>
                                     </div>
+                                </div>
+                                <!-- Close Button-->
+                                <div class="text-center">
+                                    <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                        <i class="fas fa-times mr-1"></i>
+                                        Close
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Bangna Team-->
+    <div class="portfolio-modal modal fade" id="bangna-team" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" />
+                </div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10 text-left">
+                            <div class="modal-body">
+                                <!-- General-->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ทันตกรรมทั่วไป, ทันตกรรมบูรณะ & ทันตกรรมตกแต่ง <br>(General
+                                        Dentistry, Operative & Esthetic Dentistry)</h5>
+                                </div>
+                                <!-- Pedodontics-->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ทันตกรรมเด็ก <br> (Pedodontics)</h5>
+
+                                </div>
+                                <!-- Endodontics-->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ทันตกรรมรักษารากฟัน<br> (Endodontics)</h5>
+
+                                </div>
+                                <!-- Implant-->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ทันตกรรมประดิษฐ์ – ทันตกรรมรากเทียม<br> (Prosthodontics – Implant
+                                        Dentistry)</h5>
+
+
+                                </div>
+                                <!-- Oral -->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ศัลยกรรมช่องปาก & แม็กซิลโลเฟเชียล – ศัลยกรรมรากเทียม<br> (Oral &
+                                        Maxillofacial Surgery – Surgical Implant Dentistry)</h5>
+
+                                </div>
+                                <!-- Periodontics-->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ทันตกรรมปริทันต์<br> (Periodontics)</h5>
+
+                                </div>
+                                <!-- Orthodontics-->
+                                <div class="dentist-group">
+                                    <h5 class="mb-4">ทันตกรรมจัดฟัน<br> (Orthodontics)</h5>
+
                                 </div>
                                 <!-- Close Button-->
                                 <div class="text-center">
