--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/04-thumbnail.jpg" alt="" />
+                            <img class="img-fluid" src="assets/img/portfolio/endodontics.jpg" alt="" />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">การรักษาคลองรากฟัน</div>
@@ -1733,7 +1733,8 @@
                                 <!-- Project Details Go Here-->
                                 <h2 class="text-uppercase">การรักษาคลองรากฟัน</h2>
                                 <p class="item-intro text-muted text-center">Endodontics/Root canal treatment</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/endodontics.jpg"
+                                    alt="" />
                                 <p class="mt-2">ฟันที่ผุจนลึกเข้าไปใกล้โพรงประสาทฟัน หรือฟันแตกหัก
                                     มีรอยร้าวจากการบดเคี้ยว หรือการเกิดอุบัติเหตุ ทำให้เชื้อแบคทีเรียในน้ำลาย
                                     เข้าไปทำอันตรายต่อประสาทฟัน นอกจากนี้โรคเหงือกอักเสบเรื้อรัง
