--- a/index.html
+++ b/index.html
@@ -306,7 +306,8 @@
                                         <td>9,500฿ ขึ้นไป</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">ฟันเทียมทั้งปากชนิดฐานเป็นอคริลิค (Complete Denture)</th>
+                                        <th scope="row">ฟันเทียมทั้งปากชนิดฐานเป็นอคริลิค (Complete Denture)
+                                        </th>
                                         <td>25,000 - 35,000฿</td>
                                     </tr>
                                     <tr>
@@ -329,7 +330,8 @@
                                         <td>20,000 - 22,000฿</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row" style="padding-left: 50px;">เซรามิกทั้งชิ้น (All Ceramic)</th>
+                                        <th scope="row" style="padding-left: 50px;">เซรามิกทั้งชิ้น (All Ceramic)
+                                        </th>
                                         <td>15,000 - 18,000฿</td>
                                     </tr>
                                     <tr>
@@ -488,10 +490,10 @@
             </div>
             <div class="text-left">
                 <h3 class="section-subheading text-muted mt-4 mb-1">
-                    * All prices are subject to change without notice.
+                    * อัตราค่ารักษาอาจเปลี่ยนแปลงตามการใช้วัสดุหรือเครื่องมือพิเศษ
                 </h3>
                 <h3 class="section-subheading text-muted">
-                    * อัตราค่ารักษาอาจเปลี่ยนแปลงตามการใช้วัสดุหรือเครื่องมือพิเศษ
+                    * All prices are subject to change depending on tools and materials used.
                 </h3>
 
             </div>
@@ -1580,9 +1582,9 @@
                                     และก่อให้เกิดความรำคาญ แต่ในปัจจุบันมีตะขอสีขาวที่ช่วยให้เกิดความสวยงามเพิ่มขึ้น
                                 </p>
                                 <img class="knowledge-img" style="max-width:15rem;" src="assets/img/portfolio/removable-partial-denture.png" alt="Removable Partial Denture" />
-                                <p><b>ฟันเทียมฐานพลาสติค (Temporary Plate: TP)</b> ลักษณะของฟันเทียมจะมีฐานเป็นเหงือกสีชมพูซึ่งทำจากพลาสติก วัตถุประสงค์เพื่อใช้ชั่วคราว มีความแข็งแรงน้อยกว่า <b>ฟันเทียมฐานโลหะ (Partial
+                                <p><b>ฟันเทียมฐานพลาสติก (Temporary Plate: TP)</b> ลักษณะของฟันเทียมจะมีฐานเป็นเหงือกสีชมพูซึ่งทำจากพลาสติก วัตถุประสงค์เพื่อใช้ชั่วคราว มีความแข็งแรงน้อยกว่า <b>ฟันเทียมฐานโลหะ (Partial
                                         Denture:
-                                        PD)</b> แต่ราคาถูกกว่า และเมื่อใช้ฟันเทียมฐานพลาสติคไปนานๆ จะมีกลิ่นและติดสี ฟันเทียมฐานโลหะจะทำความสะอาดได้ง่ายกว่า ผู้ที่ใส่ฟันเทียมฐานโลหะจะรู้สึกสบายกว่า เนื่องจากโลหะมีความบาง สามารถส่งผ่านความร้อน ความเย็นได้ดี
+                                        PD)</b> แต่ราคาถูกกว่า และเมื่อใช้ฟันเทียมฐานพลาสติกไปนานๆ จะมีกลิ่นและติดสี ฟันเทียมฐานโลหะจะทำความสะอาดได้ง่ายกว่า ผู้ที่ใส่ฟันเทียมฐานโลหะจะรู้สึกสบายกว่า เนื่องจากโลหะมีความบาง สามารถส่งผ่านความร้อน ความเย็นได้ดี
                                     ทำให้ความรู้สึกในการรับประทานอาหารดีกว่า
                                 </p>
                                 <p>ส่วนในกรณีที่ใส่ฟันเทียมทั้งปาก โดยไม่มีฟันธรรมชาติเหลืออยู่เลยนั้น ฟันเทียมจะวางอยู่บนสันเหงือก ซึ่งฟันเทียมจะมีการขยับบ้างเวลาเคี้ยวอาหาร และเมื่อใช้ไปสักระยะ ฟันเทียมจะหลวม เนื่องจากสันเหงือกได้ยุบตัวลง ปัจจุบันหากมีปัญหาการหลวมหลุดของฟันเทียมทั้งปาก
