--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <section class="page-section" id="about">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">About Us</h2>
-                <h3 class="section-subheading text-muted"></h3>
+                <h2 class="section-heading text-uppercase mb-0">About Us</h2>
+                <h3 class="section-subheading-normal ">เกี่ยวกับเรา</h3>
             </div>
             <div class="row">
                 <div class="about-button col-md-3 text-center mb-3" data-toggle="collapse" href="#long-experience" aria-expanded="false" aria-controls="long-experience">
@@ -130,8 +130,8 @@
     <section class="page-section bg-light" id="team">
         <div class=" container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                <h3 class="section-subheading text-muted"></h3>
+                <h2 class="section-heading text-uppercase mb-0">Our Amazing Team</h2>
+                <h3 class="section-subheading-normal ">ทีมแพทย์เฉพาะทางของเรา</h3>
             </div>
             <div class="row d-flex justify-content-around">
                 <div class="col-lg-6 mb-4">
@@ -170,8 +170,8 @@
     <section class="page-section" id="services">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Services</h2>
-                <h3 class="section-subheading text-muted"></h3>
+                <h2 class="section-heading text-uppercase mb-0">Services</h2>
+                <h3 class="section-subheading-normal">บริการ</h3>
             </div>
             <div class="accordion" id="accordionExample">
                 <!-- Restoration-->
@@ -503,8 +503,8 @@
     <section class="page-section bg-light" id="knowledge">
         <div class=" container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Dental Knowledge</h2>
-                <h3 class="section-subheading text-muted"></h3>
+                <h2 class="section-heading text-uppercase mb-0">Dental Knowledge</h2>
+                <h3 class="section-subheading-normal">ความรู้เกี่ยวกับทันตกรรมและวิธีการดูแลรักษาฟัน</h3>
             </div>
             <div class="row d-flex justify-content-around">
                 <!-- Pedodontics-->
@@ -666,8 +666,8 @@
     <section class="page-section" id="faq">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Frequently Asked Questions</h2>
-                <h3 class="section-subheading text-muted"></h3>
+                <h2 class="section-heading text-uppercase mb-0">Frequently Asked Questions</h2>
+                <h3 class="section-subheading-normal">คำถามที่พบบ่อย</h3>
             </div>
             <div class="accordion" id="accordion2">
                 <div class="card">
@@ -790,6 +790,95 @@
                         </div>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card-header" id="headingSix">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false " aria-controls="collapseSix">
+                                เจ็บมากแค่ไหน ตอนทำทันตกรรมรากเทียม และต้องหยุดงานหลังทำกี่วัน?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion2">
+                        <div class="card-body ">
+                            <p>ไม่เจ็บ ทันตแพทย์จะใช้ยาชาเฉพาะที่ระหว่างการผ่าตัด ดังนั้นท่านจะไม่เจ็บระหว่างการฝังรากเทียม อาจมีเจ็บบ้างนิดหน่อยหลังการผ่าตัด ทันตแพทย์จะให้รับประทานยาแก้ปวดแก้อักเสบ โดยทั่วไปแล้ว
+                                <b>ท่านสามารถกลับไปทำงานได้ตามปกติในวันรุ่งขึ้น</b> ทันตแพทย์จะให้คำแนะนำในการดูแลทำความสะอาดภายหลังการฝังรากเทียม
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingSeven">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                                ทำไมจำเป็นต้องรักษาคลองรากฟัน?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion2">
+                        <div class="card-body">
+                            <p>เมื่อประสาทฟันถูกกระทบกระเทือนจะเกิดการอักเสบเป็นหนอง หรือประสาทฟันตายในที่สุด ทำให้รู้สึกปวดฟันมาก <b>การรักษาคลองรากฟันเป็นการกำจัดเนื้อเยื่อที่อักเสบหรือเป็นหนองออก
+                                    ทำให้อาการเจ็บปวดหายไปแล้วยังมีฟันไว้ใช้งานตามปกติต่อไปได้</b> การปล่อยฟันที่เป็นโรคทิ้งไว้นานๆ ทำให้กระดูกที่รองรับฟันอักเสบ ละลายตัวไปอาจจะไม่สามารถเก็บรักษาฟันไว้ได้ เมื่อถอนฟันไปแล้วกระดูกบริเวณซี่นั้นจะยุบลงไป
+                                ทำให้ใส่ฟันเทียมได้ไม่สวยเหมือนฟันธรรมชาติ ประสิทธิภาพการเคี้ยวก็ลดน้อยลง นอกจากนี้ค่าใช้จ่ายในการใส่ฟันอาจจะสูงกว่าการรักษารากฟัน
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header " id="headingEight">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                                ฟันที่รักษาคลองรากฟันแล้วควรบูรณะอย่างไร?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion2">
+                        <div class="card-body">
+                            <p>ฟันส่วนใหญ่ที่รักษาคลองรากฟัน มักมีรอยผุใหญ่และเหลือเนื้อฟันน้อย จึงหักได้ง่าย ดังนั้นหลังจากรักษาคลองรากฟันแล้ว <b>ควรบูรณะให้ฟันมีความแข็งแรง</b> ไม่ให้แตกหักได้ง่าย ด้วยวิธีต่างๆ ดังนี้</p>
+                            <ul>
+                                <li>ถ้าเหลือเนื้อฟันมากและเป็นฟันซี่ที่ไม่ได้ใช้งานมาก ให้ใช้วิธีอุดให้เต็มโพรงฟันก็แข็งแรงพอ
+                                </li>
+                                <li>ถ้าเหลือเนื้อฟันน้อย โดยเฉพาะฟันกรามที่ต้องใช้เคี้ยวอาหารมาก ควรทำครอบฟัน</li>
+                                <li>ถ้าเหลือเนื้อฟันน้อยมาก ต้องใช้เดือยยึดในรากฟันก่อนจึงจะทำครอบฟันได้</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingNine">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                                อุดฟันด้วยวัสดุสีเหมือนฟัน กับวัสดุที่เป็นสีเงิน อย่างไหนดีกว่ากัน?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseNine" class="collapse" aria-labelledby="headingNine" data-parent="#accordion2">
+                        <div class="card-body ">
+                            <p>วัสดุอุดฟันทั้ง 2 ชนิดมีข้อดี ข้อเสียแตกต่างกัน วัสดุอุดฟันที่เป็นสีเงิน (อมัลกัม) มีข้อดีที่แข็งแรง ขั้นตอนการรักษาไม่ยุ่งยาก และค่าใช้จ่ายไม่สูง ส่วนวัสดุอุดสีเหมือนฟัน (คอมโพสิต) มีข้อดีที่ความสวยงาม ความแข็งแรง ยึดติดกับเนื้อฟันด้วยพันธะเคมี
+                                ทำให้กรอเนื้อฟันน้อยกว่าการอุดด้วยอมัลกัม <b>อย่างไรก็ตาม
+                                    ทันตแพทย์จะพิจารณาเลือกวัสดุอุดที่เหมาะสมกับรอยผุของฟันแต่ละซี่</b></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingTen">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
+                                สูญเสียฟันไป 1 ซี่ ควรจะใส่ฟันเทียมแบบไหนดี?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTen" class="collapse" aria-labelledby="headingTen" data-parent="#accordion2">
+                        <div class="card-body">
+                            <p>สามารถใส่ฟันเทียมได้ 3 วิธี คือ</p>
+                            <ol>
+                                <li><b>ทันตกรรมรากเทียม</b> คือการใส่ฟันเทียมถาวรบนรากเทียม ซึ่งจะมีความแข็งแรง รูปร่างลักษณะ ความสวยงาม ความรู้สึก และการใช้งาน ใกล้เคียงฟันธรรมชาติมากที่สุด</li>
+                                <li><b>สะพานฟันติดแน่น</b> ทำโดยกรอฟันข้างเคียงที่ติดกับช่องว่างที่เกิดขึ้น แล้วทำฟันเทียมติดแน่นสวมทับเป็นฟัน 3 ซี่ ซึ่งจะให้ความแข็งแรง สวยงามได้ดี</li>
+                                <li><b>ฟันเทียมชนิดถอดได้</b> (ฐานพลาสติกหรือฐานโลหะ) ทำโดยต้องมีการวางตะขอกับฟันที่เหลืออยู่ เพื่อยึดฟันเทียมไว้ ซึ่งอาจก่อให้เกิดความรำคาญ นอกจากนี้ความสวยงามและประสิทธิภาพการเคี้ยวอาหารยังต่ำกว่าฟันธรรมชาติมาก แต่มีราคาต่ำกว่าการใส่ฟันเทียมชนิดอื่นๆ
+                                </li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -797,7 +886,8 @@
     <section class="page-section bg-light" id="contact">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Contact Us</h2>
+                <h2 class="section-heading text-uppercase mb-0">Contact Us</h2>
+                <h3 class="section-subheading-normal mb-4 ">ติดต่อเรา</h3>
                 <h3 class="section-subheading-caution">
                     ปรึกษาปัญหาเรื่องฟันและนัดหมายกับทันตแพทย์เฉพาะทางฟรี <br> Contact us for a free consultation and to make an appointment
                 </h3>
